src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <formula>IF( !(  ISBLANK(Wife_Name__c ) ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reg_Id__c</fullName>
        <label>Reg Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollNumber__c</fullName>
        <label>RollNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wife_Name__c</fullName>
        <label>Wife Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Email_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AvailableCheck</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Class__r.Available__c == 0, true, false)</errorConditionFormula>
        <errorDisplayField>Class__c</errorDisplayField>
        <errorMessage>Cannot add student to this class, Max. limit reached.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOBValidation</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>DOB should be greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TeacherActiveCheckValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Teacher__r.Active__c == false, true, false)</errorConditionFormula>
        <errorMessage>Cannot create student on Inactive Teacher</errorMessage>
    </validationRules>
</CustomObject>